--- a/exercise 4/styleletters2.css
+++ b/exercise 4/styleletters2.css
@@ -91,7 +91,7 @@ body {
 
 /* Add hover of the whole e2, to make all the triangles, vertical and horizontal 15% bigger on hover, and back to normal on unhover*/
 .e2:hover{
-  transform: scale(5);
-  transform-origin: left;
-  transition: transform 0.3s;
+  transform: scale(20);
+  transform-origin: center;
+  transition: transform 0.5s;
 }
