--- a/exercise8/exercise81.css
+++ b/exercise8/exercise81.css
@@ -37,3 +37,26 @@ body {
   margin: 6px;
   font-family: Arial, sans-serif;
 }
+
+
+.NextPage {
+  position: fixed;       
+  bottom: 20px;          
+  right: 20px;          
+       
+  color: rgb(255, 255, 255);         
+  padding: 10px 14px;     
+  text-decoration: none;  
+  font-size: 24px;       
+}
+
+.PageBefore {
+  position: fixed;       
+  bottom: 20px;          
+  left: 20px;          
+       
+  color: rgb(255, 255, 255);         
+  padding: 10px 14px;     
+  text-decoration: none;  
+  font-size: 24px;       
+}
